--- a/src/jmxconsumer/build.gradle
+++ b/src/jmxconsumer/build.gradle
@@ -55,8 +55,8 @@ dependencies {
     compile 'io.netty:netty-codec-http2:4.1.17.Final'
     compile 'io.netty:netty-tcnative-boringssl-static:2.0.7.Final'
     compile group: 'com.google.guava', name: 'guava', version: '24.0-jre'
-    compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.10.0'
-    compile 'org.apache.logging.log4j:log4j-core:2.10.0'
+    compile 'org.apache.logging.log4j:log4j-api:2.18.0'
+    compile 'org.apache.logging.log4j:log4j-core:2.18.0'
     compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.9.4'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.5.4'
     compile 'javax.annotation:javax.annotation-api:1.3.2'
@@ -68,7 +68,7 @@ dependencies {
     testRuntime("org.junit.platform:junit-platform-launcher:${junitPlatformVersion}")
     testCompile "org.junit.platform:junit-platform-console-standalone:${junitPlatformVersion}"
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.9.0'
-    testCompile group: 'com.j256.simplejmx', name: 'simplejmx', version: '1.15'
+    testCompile group: 'com.j256.simplejmx', name: 'simplejmx', version: '1.19'
     testCompile "org.mockito:mockito-core:2.+"
     testCompile 'org.apache.httpcomponents:httpclient:4.5.5'
 }
@@ -76,10 +76,13 @@ dependencies {
 mainClassName = "org.cloudfoundry.jmxconsumer.App"
 jar {
     manifest {
-        attributes 'Main-Class': "$mainClassName"
+        attributes 'Main-Class': "$mainClassName", 'Multi-Release': 'true'
     }
 
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+
     exclude ('META-INF/*.RSA', 'META-INF/*.SF','META-INF/*.DSA') //https://stackoverflow.com/a/45153151
 }
 
